# lex-haiti

./: .gitignore  LICENSE  Makefile  NOTICE  README.md  docker-compose.yml
backend/: .dockerignore  .env.example  Dockerfile  pyproject.toml
backend/api/: __init__.py  config.py  db.py  deps.py  exceptions.py  main.py  rate_limit.py
backend/api/routes/: __init__.py  admin_users.py  articles.py  citations.py  decisions.py  editorial.py  editorial_chronologie.py  editorial_translations.py  legal_texts.py  moniteur.py  promulgations.py  search.py  stats.py
backend/data/: chronologie_2001.json  constitution_1987_text_ht.json  laws_folder_survey.md  moniteur_batch_2025.py
backend/data/laws_inbox_2026/: 03-18-1966-a.json  54785cac4.json  accord-politique-pour-une-gouvernance-apaisee-et-efficace-de-la-periode-interimaire.json  arrete-liberant-les-membres-du-conseil-electoral-provisoire-de-leurs-liens-avec-l-administ.json  avis-de-liquidation-de-pension-civile-de-retraite.json  compilations-textes-relatifs-aux-fonds-petrocaribe-moniteur-haiti.json  concordat-1860.json  decret-adaptant-les-structures-organlsattonnelles-du-menjs-aux-nouvelles-realites-politiqu.json  decret-creant-le-centre-financier-international-de-l-ile-de-la-gonave.json  decret-du-17-aout-1987-portant-organisation-et-fonctionnement-du-ministere-des-affaires-et.json  decret-du-29-mars-reglementant-la-profession-avocat-pdf.json  decret-du-30-avril-2023.json  decret-fixant-l-organisation-et-le-fonctionnement-de-la-commune.json  decret-portant-sur-la-signature-e-lectronique.json  decret-sections-communales.json  haiti-l-arrete-presidentiel-193-traitant-des-exonerations-des-anciens-dignitaires-de-l-eta.json  haiti-loi-relative-au-controle-et-a-la-repression-du-trafic-illicite-de-la-drogue-4-octobr.json  le-decret-du-23-novembre-2005.json  le-decret-electoral-nov-2025.json  le-moniteur-21-mars-2014-arrete-fixant-le-statut-particulier-des-personnels-educatifs.json  les-lois-votees-par-la-48eme-legislature-deputes-2006-2010.json  loi-moniteur-decret-loi-organique-menfp-1989.json  loi-portant-privileges-accordes-aux-haitiens-d-origine-jouissant-d-une-autre-nationalite-e.json  loi-signature-et-echanges-electroniques-2017.json  loi-sur-les-marche-s-publics-10-juin-2009.json  (+6 more)
backend/migrations/: alembic.ini  env.py
backend/schemas/: article.py  authority.py  block_version.py  citation.py  decision.py  editorial.py  enums.py  heading.py  legal_text.py  moniteur.py  raw.py  search.py  signer.py  theme.py  toc_node.py
backend/scripts/: apply_amendment_2011.py  apply_constitution_text_ht.py  backfill_citations.py  backfill_constitution_heading_titles_ht.py  backfill_inbox_moniteur_entries.py  backfill_laws_inbox_moniteur_entries.py  backfill_visas_considerants.py  clean_constitution_text_ht.py  create_admin.py  curate_inbox_moniteur_metadata.py  export_corpus_docx.py  extract_chronologie_index_2001.py  extract_laws_folder_text.py  fix_inbox_legal_text_metadata.py  import_laws_folder_as_drafts.py  import_moniteur_json.py  ingest_constitutions.py  ingest_janvier_constitutions.py  ingest_laws_inbox.py  ingest_moniteur_36a_creole.py  ingest_moniteur_batch.py  migrate_constitution_to_azure.py  normalize_ocr_substitutions.py  promote_inbox_moniteur_entries.py  promote_moniteur_batch.py  reconcile_constitution_kreyol.py  renumber_article_positions.py  reparse_inbox_legaltexts.py  run_migrations.py  seed.py  seed_authorities.py  seed_chronologie_2001.py  seed_moniteur_special_5_2017.py  structure_constitutions.py  survey_laws_folder.py  sync_legal_text_to_azure.py  tag_themes.py  wrap_text_ht_in_paragraphs.py
backend/tests/: test_api_contract.py  test_article_split.py  test_corpus_service.py  test_document_parser.py  test_editorial_api.py  test_editorial_service.py  test_moniteur_json_import.py  test_moniteur_pipeline.py  test_official_metadata.py  test_parser_profiles.py  test_signatories_constituante.py  test_smoke.py
backend/workers/: __init__.py  jobs.py  queue.py
(+229 files in other folders)
